fixed menu z-index

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -25,6 +25,7 @@
             width: 100%;
             background-color: map-get($map: v.$colors, $key: white1);
             transition: 400ms cubic-bezier(0.23, 1, 0.32, 1);
+            z-index: 2;
         }
         overflow: hidden
 
