--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -266,6 +266,7 @@ body {
     width: 100%;
     background-color: white;
     transition: 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 2;
   }
 }
 .header__buttons-group {
